# react-native-webgpu

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.md  README.md  VIDEO_SUPPORT.md  nx.json  package-lock.json  package.json  turbo.json
.github/: build-android.yml  build-dawn.yml  ci.yml  cpplint.yml
.github/actions/setup/: action.yml
.github/workflows/: build-android.yml  build-dawn.yml  build-ios.yml  ci.yml  cpplint.yml  deploy-docs.yml  publish-npm.yml
.yarn/patches/: @react-three-fiber-npm-8.17.6-bc537e834c.patch  @react-three-fiber-npm-9.4.0-77fe8ee9bd.patch  react-native-web-npm-0.19.13-fe8941425a.patch  three-npm-0.168.0-240bac8179.patch
apps/docs/: .gitignore  README.md  docusaurus.config.ts  eslint.config.mjs  next.config.ts  package.json  sidebars.ts  source.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/docs/app/: global.css  layout.tsx
apps/docs/app/(content)/: layout.tsx
apps/docs/app/(home)/: layout.tsx  page.tsx
apps/docs/content/api/: canvas-ref.mdx  canvas.mdx  gpu-device-extensions.mdx  gpu-device-provider.mdx  gpu-offscreen-canvas.mdx  index.mdx  install-webgpu.mdx  meta.json  native-types.mdx  rn-webgpu.mdx  use-canvas-ref.mdx  use-device.mdx  use-main-device.mdx  use-surface.mdx  warn-if-not-hardware-accelerated.mdx
apps/docs/content/docs/: meta.json
apps/docs/docs/: installation.md  intro.md  usage.md
apps/docs/docs/differences/: canvas-transparency.md  (+4 more)
apps/docs/scripts/: fetch-computetoys.mjs
apps/docs/src/: global.d.ts
apps/example/: .eslintrc  .gitignore  app.config.js  app.json  babel.config.js  bundle.js  eslint.config.js  eslint.config.mjs  getWebMetroConfig.js  index.html  index.js  index.web.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
apps/example/android/: build.gradle  gradle.properties  settings.gradle
apps/example/ios/: Podfile  RCT-Folly.podspec  fmt.podspec
apps/example/macos/: Podfile
apps/example/scripts/: modify-ios-directory.js  sync-cts.sh
apps/example/src/: App.tsx  Home.tsx  Route.ts  Tests.tsx  VideoSupport.tsx  index.d.ts  resolveAssetSourcePolyfill.js  useClient.ts
apps/example/visionos/: Podfile
apps/expo-example/: .gitignore  App.tsx  README.md  app.json  metro.config.js  package.json  tsconfig.json
apps/expo-example/plugins/: withInternalExpoImport.js
apps/paper/: .eslintrc  babel.config.js  metro.config.js  package.json  tsconfig.json
apps/paper/android/: build.gradle  local.properties  settings.gradle
apps/paper/src/: App.tsx  Home.tsx  Route.ts  Tests.tsx  index.d.ts
apps/web-example/: .gitignore  App.js  app.json  metro.config.js  package.json
docs/: refactor-async-present-plan.md
example/: .eslintrc  babel.config.js  index.js  metro.config.js  package.json  tsconfig.json
example/android/: settings.gradle
example/ios/: Podfile
example/ios/WgpuExample/: AppDelegate.mm
example/ios/WgpuExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
package/: .eslintrc  .gitignore  README.md  jest.config.js  package.json  react-native-webgpu.podspec  react-native-wgpu.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json
package/android/: BundleLibraries.cmake  CMakeLists.txt  build.gradle  gradle.properties
package/android/SizeHolder/: CMakeLists.txt  SizeHolder.cpp  SizeHolder.h
package/android/StaticDataBridge/: SizeHolder.h
package/android/codegen/: RNWgpuViewSpec-generated.cpp  RNWgpuViewSpec.cpp
package/android/codegen/react/renderer/components/RNWgpuViewSpec/: ComponentDescriptors.cpp  ComponentDescriptors.h  EventEmitters.h  RNWgpuViewSpecJSI-generated.cpp  RNWgpuViewSpecJSI.cpp  ShadowNodes.cpp  ShadowNodes.h  States.cpp  States.h
package/android/cpp/: AndroidPlatformContext.h  cpp-adapter.cpp
package/android/jni/: CMakeLists.txt  RNWgpuViewSpec.h
package/android/jni/react/renderer/components/RNWgpuViewSpec/: ComponentDescriptors.h  EventEmitters.cpp  Props.cpp  Props.h  RNWgpuViewSpecJSI.h  ShadowNodes.cpp  ShadowNodes.h
package/android/src/main/java/com/webgpu/: WebGPUModule.java  WebGPUSurface.java  WebGPUView.java  WebGPUViewManager.java  WebGPUViewPackage.java
package/android/src/newarch/: WgpuViewManagerSpec.java
package/android/src/newarch/com/webgpu/: WebGPUViewManagerSpec.java
package/android/src/oldarch/: WebGPUViewManagerSpec.java
package/cpp/: Logger.h  WGPULogger.h
package/cpp/jsi/: RNFHybridObject.cpp  RNFHybridObject.h  RNFJSIConverter.h  RNFJSIHelper.h  RNFLogger.h  RNFPointerHolder.h  RNFPromise.cpp  RNFPromise.h  RNFRuntimeCache.cpp  RNFWorkletRuntimeRegistry.cpp  RNFWorkletRuntimeRegistry.h
package/cpp/rnwgpu/: ArrayBuffer.h  ContextManager.cpp  ContextManager.h  MutableBuffer.h  PlatformContext.h  RNWebGPUManager.cpp  RNWebGPUManager.h  SurfaceRegistry.h
package/example/: app.json  babel.config.js  metro.config.js  package.json
package/example/ios/: File.swift  Podfile
package/example/src/: App.tsx  Buffers.tsx  HelloTriangle.tsx  Home.tsx  NativeView.tsx  Route.ts  Tests.tsx
package/example/visionos/: Gemfile  Podfile
package/ios/: IOSPlatformContext.h  IOSPlatformContext.mm  MetalView.h  MetalView.mm  RNFAppleLogger.mm  SurfaceUtils.h  SurfaceUtils.mm  Utils.h  WebGPUModule.h  WebGPUModule.mm  WebGPUView.h  WebGPUView.mm  WebGPUViewComponentDescriptor.h  WebGPUViewManager.mm
package/scripts/: build-dawn.ts  copy-artifacts.ts  util.ts
package/scripts/codegen/: Descriptors.ts  bindings.ts  codegen.ts  util.ts
package/src/: Canvas.tsx  NativeSetup.tsx  NativeWebGPUModule.ts  WebGPUNativeModule.ts  WebGPUView.tsx  WebGPUViewNativeComponent.ts  index.tsx  utils.ts
package/src/__tests__/: Adapter.spec.ts  Adapter.spec.tsx  ArrayBuffer.spec.ts  Buffer.spec.ts  ComputeShader.spec.old  ComputeShader.spec.ts  Constants.spec.ts  Device.spec.ts  ExternalTexture.spec.ts  GPU.spec.ts  ImageBitmap.spec.ts  ImageData.spec.ts  Shaders.spec.ts  Shaders.ts  Simple.spec.tsx  TextDecoder.spec.ts  Texture.spec.ts  Triangle.spec.ts  config.ts  globalSetup.ts  setup.ts
package/src/utils/: GPUDeviceProvider.tsx  index.ts
patches/: @react-three+fiber+8.17.6.patch
(+625 files in other folders)
